--- a/css/rmp2.css
+++ b/css/rmp2.css
@@ -299,7 +299,6 @@ a:hover .fa-circle {
 }
 .allwrap a {
   color: white;
-  border-bottom: 1px solid #ccc;
 }
 
 #blogwrap h4, #headerwrap h4, #workwrap h4 {
@@ -378,7 +377,7 @@ a:hover .fa-circle {
   height: 100%;
   z-index: -1;
   opacity: 0.7;
-  background: #339a65;
+  background: #008036;
   border-radius: 25px;
 }
 .rmp-btn-green a {
@@ -397,6 +396,20 @@ header .rmp-btn-green {
 header .rmp-btn-green a {
   padding: 10px;
   color: white !important;
+  text-decoration: none;
+}
+
+#headerwrap .rmp-btn-green {
+  top: 50px;
+  padding: 19px 52px;
+  border-radius: 45px;
+}
+#headerwrap .rmp-btn-green a {
+  font-weight: bold;
+  font-size: 26px;
+}
+#headerwrap .rmp-btn-green:before {
+  border-radius: 45px;
 }
 
 .accent-link {
@@ -435,6 +448,29 @@ header .rmp-btn-green a {
 #call-to-action .call-right {
   background: #282828;
   padding-right: 0;
+}
+
+/***********************
+* COMPATIBILITY SECTION
+***********************/
+#compatibility {
+  padding-bottom: 100px;
+}
+#compatibility h2 {
+  color: #745da5;
+}
+#compatibility p {
+  font-style: italic;
+}
+#compatibility .devices {
+  border-right: 3px dashed #745da5;
+}
+#compatibility .devices span {
+  color: #9e9e9e;
+  padding-left: 15px;
+}
+#compatibility .browsers img {
+  width: 50px;
 }
 
 /********************
@@ -537,6 +573,13 @@ footer {
   -webkit-background-size: 30px 30px;
   background-size: 30px 30px;
   background-position: 10px;
+}
+
+.page-home #headerwrap img {
+  display: block;
+  top: 100px;
+  position: relative;
+  margin: 0 auto;
 }
 
 .page-contact section.container {
@@ -725,6 +768,37 @@ footer {
 }
 .page-parents .speech-bubble.offset:after {
   border-width: 60px 0 0 60px;
+}
+
+.page-try #wrapper-team h2 {
+  margin-bottom: 25px;
+}
+.page-try #wrapper-team .instruction {
+  background: whitesmoke;
+  height: 420px;
+  font-size: 16px;
+  padding: 35px;
+}
+.page-try #wrapper-team .instruction.ipad {
+  color: white;
+  background: url(../img/instructions/photo-tip.jpg);
+  -webkit-background-size: contain;
+  background-size: contain;
+}
+.page-try #wrapper-team .instruction.ipad p {
+  font-style: italic;
+}
+.page-try #wrapper-team .instruction.ipad h3 {
+  text-transform: uppercase;
+  color: white;
+  margin-bottom: 30px;
+}
+.page-try #wrapper-team .instruction span::first-letter {
+  color: red;
+}
+.page-try #wrapper-team .instruction img {
+  margin-bottom: 25px;
+  width: 150px;
 }
 
 /* eo page partials */
